# iconator

./: .env.sample  CLAUDE.md  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yml  package.json
.claude/: settings.json
.github/workflows/: api-ci.yaml  dependency-review.yml  lint.yaml  nightly-cargo-audit.yaml  test-workflow.yml
db/migrations/2025-01-01-000001_create_icons/: down.sql  up.sql
db/migrations/2025-01-01-000002_create_query_history/: down.sql  up.sql
db/migrations/2025-01-01-000003_seed_icons/: down.sql  up.sql
db/scripts/: init-readonly-local.sql
libs/iconator/: Cargo.toml  build.rs
libs/iconator/src/: lib.rs
libs/postgres/: Cargo.toml
libs/postgres/src/: connection.rs  schema.rs
libs/postgres/src/models/: icon_lookup.rs  mod.rs  query_history.rs
libs/redis/: Cargo.toml
libs/redis/src/: connection.rs
libs/sdk/: Cargo.toml
libs/sdk/src/: client.rs  error.rs  lib.rs
libs/types/: Cargo.toml
libs/types/src/: lib.rs
libs/utils/: Cargo.toml
libs/utils/src/: database.rs
monitoring/grafana/provisioning/datasources/: datasource.yml
postman/: mainmatter-backend.postman_collection.json
scripts/: gen_icon_seed.py  run_migration.sh  setup.sh  update_schemas.sh
services/api/server/: Cargo.toml  Dockerfile
services/api/server/src/: health.rs  lib.rs  main.rs  openapi.rs  shutdown.rs
services/api/server/src/icon_api/: error_recorder.rs  errors.rs  icon_api_error.rs  icon_api_error_v1.rs  mod.rs
services/api/server/src/shared/errors/: base.rs  common.rs
services/api/server/src/shared/extractors/: cache.rs  (+2 more)
(+8 files in other folders)
